@@ -168,13 +168,6 @@ class LedgerPrinter:
         # residual and precisely balance the transaction.
         entry = interpolate.fill_residual_posting(entry, ROUNDING_ACCOUNT)
 
-        if entry.tags:
-            for tag in sorted(entry.tags):
-                strings.append(';; Tag: #{}'.format(tag))
-        if entry.links:
-            for link in sorted(entry.links):
-                strings.append(';; Link: ^{}'.format(link))
-
         # Compute the string for the payee and narration line.
         if entry.payee:
             strings.append('{} |'.format(entry.payee))
@@ -184,6 +177,11 @@ class LedgerPrinter:
         oss.write('{e.date:%Y/%m/%d} {flag} {}\n'.format(' '.join(strings),
                                                          flag=entry.flag or '',
                                                          e=entry))
+
+        if entry.tags:
+            oss.write('  ; :{}:\n'.format(':'.join(sorted(entry.tags))))
+        if entry.links:
+            oss.write('  ; Link: {}\n'.format(', '.join(sorted(entry.links))))
 
         for posting in entry.postings:
             self.Posting(posting, entry, oss)
@@ -289,6 +287,34 @@ class HLedgerReport(base.Report):
 
 class HLedgerPrinter(LedgerPrinter):
     "Multi-method for printing directives in HLedger format."
+
+    def Transaction(self, entry, oss):
+        strings = []
+
+        # Insert a posting to absorb the residual if necessary. This is
+        # sometimes needed because Ledger bases its balancing precision on the
+        # *last* number of digits used on that currency. This is believed to be
+        # a bug, so instead, we simply insert a rounding account to absorb the
+        # residual and precisely balance the transaction.
+        entry = interpolate.fill_residual_posting(entry, ROUNDING_ACCOUNT)
+
+        # Compute the string for the payee and narration line.
+        if entry.payee:
+            strings.append('{} |'.format(entry.payee))
+        if entry.narration:
+            strings.append(entry.narration)
+
+        oss.write('{e.date:%Y/%m/%d} {flag} {}\n'.format(' '.join(strings),
+                                                         flag=entry.flag or '',
+                                                         e=entry))
+
+        if entry.tags:
+            oss.write('  ; {}:\n'.format(':, '.join(sorted(entry.tags))))
+        if entry.links:
+            oss.write('  ; Link: {}\n'.format(' '.join(sorted(entry.links))))
+
+        for posting in entry.postings:
+            self.Posting(posting, entry, oss)
 
     def Posting(self, posting, entry, oss):
         flag = '{} '.format(posting.flag) if posting.flag else ''
